--- a/octar.cabal
+++ b/octar.cabal
@@ -1,5 +1,5 @@
 name:                octar
-version:             0.3.1
+version:             0.3.1.1
 synopsis:            replicated archive organization
 category:            Database, Network
 description:
@@ -27,6 +27,7 @@ library
   exposed-modules:     Octar
                      , Octar.CLI
                      , Turtle.Ipfs
+                     , Turtle.Git
   other-modules:       Octar.Index
                      , Octar.Index.Frontend
                      , Octar.Entry
