--- a/octar.cabal
+++ b/octar.cabal
@@ -30,6 +30,7 @@ library
                      , Turtle.Git
   other-modules:       Octar.Index
                      , Octar.Index.Frontend
+                     , Octar.Index2
                      , Octar.Entry
                      , Octar.Metadata
                      , Octar.Method
@@ -38,6 +39,7 @@ library
   build-depends:
     base                 >= 4.10.0 && < 4.13,
     aeson                >= 1.2.4 && < 1.5,
+    discard,
     text                 >= 1.2.2 && < 1.3,
     time                 >= 1.8.0 && < 1.9,
     optparse-applicative >= 0.14.0 && < 0.15,
