--- a/octar.cabal
+++ b/octar.cabal
@@ -1,5 +1,5 @@
 name:                octar
-version:             0.3.1.2
+version:             0.4.0
 synopsis:            replicated archive organization
 category:            Database, Network
 description:
@@ -37,10 +37,12 @@ library
                      , Octar.Method
                      , Octar.Method.Common
                      , Octar.CLI.Opts
+                     , Octar.Config
   build-depends:
     base                 >= 4.10.0 && < 4.13,
     aeson                >= 1.2.4 && < 1.5,
     discard,
+    lens,
     text                 >= 1.2.2 && < 1.3,
     time                 >= 1.8.0 && < 1.9,
     optparse-applicative >= 0.14.0 && < 0.15,
