--- a/octar.cabal
+++ b/octar.cabal
@@ -53,6 +53,8 @@ library
     bytestring           >= 0.10.8 && < 0.11,
     http-types           >= 0.9.1 && < 0.13,
     mtl                  >= 2.2.2 && < 2.3,
+    stm,
+    unix,
     parsec               >= 3.1.13 && < 3.2
   hs-source-dirs:      lib
   default-language: Haskell2010
