--- a/octar.cabal
+++ b/octar.cabal
@@ -30,6 +30,7 @@ library
                      , Turtle.Git
   other-modules:       Octar.Index
                      , Octar.Index.Frontend
+                     , Octar.Index.Frontend.StaticWeb
                      , Octar.Index2
                      , Octar.Discard
                      , Octar.Entry
@@ -54,6 +55,7 @@ library
     http-types           >= 0.9.1 && < 0.13,
     mtl                  >= 2.2.2 && < 2.3,
     stm,
+    lucid,
     unix,
     wai,
     warp,
