--- a/octar.cabal
+++ b/octar.cabal
@@ -39,6 +39,7 @@ library
                      , Octar.Method.Common
                      , Octar.CLI.Opts
                      , Octar.Config
+                     , Octar.GatewayProxy
   build-depends:
     base                 >= 4.10.0 && < 4.13,
     aeson                >= 1.2.4 && < 1.5,
@@ -61,6 +62,7 @@ library
     warp,
     http-types,
     http-client,
+    http-reverse-proxy,
     parsec               >= 3.1.13 && < 3.2
   hs-source-dirs:      lib
   default-language: Haskell2010
