--- a/octar.cabal
+++ b/octar.cabal
@@ -39,7 +39,7 @@ library
                      , Octar.Method.Common
                      , Octar.CLI.Opts
                      , Octar.Config
-                     , Octar.GatewayProxy
+                     , Octar.Gateway
   build-depends:
     base                 >= 4.10.0 && < 4.13,
     aeson                >= 1.2.4 && < 1.5,
