--- a/test-alpha.yaml
+++ b/test-alpha.yaml
@@ -10,10 +10,8 @@ indexes:
 
       - name: beta
         port: 23002
-
-      - name: delta
-        port: 23003
     archivist: alice
+    save-file: jupiter-save.yaml
 
   saturn:
     storage: alt
@@ -24,16 +22,15 @@ indexes:
 
       - name: beta
         port: 23012
-
-      - name: delta
-        port: 23013
     archivist: bob
+    save-file: saturn-save.yaml
 
 storages:
 
   ipfs:
     api-port: 5001
-    gateway: https://gateway.ipfs.io
+    gateway: "18564"
 
   alt:
     api-port: 9251
+    gateway: "9252"
