--- a/test-beta.yaml
+++ b/test-beta.yaml
@@ -10,9 +10,6 @@ indexes:
 
       - name: beta
         port: 23002
-
-      - name: delta
-        port: 23003
     archivist: charlie
 
   saturn:
@@ -24,16 +21,13 @@ indexes:
 
       - name: beta
         port: 23012
-
-      - name: delta
-        port: 23013
     archivist: dave
 
 storages:
 
   ipfs:
     api-port: 5001
-    gateway: https://gateway.ipfs.io
+    gateway: 18564
 
   alt:
-    api-port: 9251
+    api-port: 9252
