--- a/octar.cabal
+++ b/octar.cabal
@@ -34,6 +34,7 @@ library
                      , Octar.Index2
                      , Octar.Discard
                      , Octar.Entry
+                     , Octar.Live
                      , Octar.Metadata
                      , Octar.Method
                      , Octar.Method.Common
