--- a/octar.cabal
+++ b/octar.cabal
@@ -42,6 +42,7 @@ library
                      , Octar.CLI.Opts
                      , Octar.Config
                      , Octar.GatewayServer
+                     , Octar.Pin
   build-depends:
     base                 >= 4.10.0 && < 4.13,
     aeson                >= 1.2.4 && < 1.5,
